--- a/z_app/templates/home.html
+++ b/z_app/templates/home.html
@@ -2,4 +2,7 @@
 
 {% block content%}
 <h1>Zzz me!</h1>
+{% include 'tweet_detail.html' %}
+{% include 'tweet_edit.html' %}
+{% include 'tweet_list.html' %}
 {% endblock %}
