--- a/z_app/templates/comment_list.html
+++ b/z_app/templates/comment_list.html
@@ -1,4 +1,4 @@
-<h2>Comments for Tweet "{{ tweet.content }}"</h2>
+<!-- <h2>Comments for Tweet "{{ tweet.content }}"</h2>
 {% if comments %}
 <ul>
     {% for comment in comments %}
@@ -11,4 +11,4 @@
 {% else %}
 <p>No comments yet.</p>
 {% endif %}
-<a href="{% url 'comment_create' tweet_id=tweet.pk %}">Reply to Tweet</a>
+<a href="{% url 'comment_create' tweet_id=tweet.pk %}">Reply to Tweet</a> -->
