--- a/z_app/templates/home.html
+++ b/z_app/templates/home.html
@@ -1,8 +1,10 @@
 {% extends 'base.html'%}
 
 {% block content%}
-<h1>Zzz me!</h1>
-{% include 'tweet_detail.html' %}
-{% include 'tweet_edit.html' %}
+
 {% include 'tweet_list.html' %}
+<!-- {% include 'tweet_new.html' %}
+{% include 'tweet_detail.html' %}
+{% include 'tweet_edit.html' %} -->
+
 {% endblock %}
