--- a/z_app/templates/tweet_edit.html
+++ b/z_app/templates/tweet_edit.html
@@ -1,6 +1,6 @@
-<h1>Edit Tweet</h1>
-<form method="POST" class="post-form">
-  {% csrf_token %} {{ form.as_p }}
+<form method="POST" class="post-form" action="{% url 'tweet_edit' tweet.id %}">
+  {% csrf_token %}
+  {{ form.as_p }}
   <button type="submit">Save changes</button>
 </form>
 <a href="{% url 'tweet_list' %}">Cancel</a>
