--- a/z_app/templates/tweet_list.html
+++ b/z_app/templates/tweet_list.html
@@ -1,10 +1,10 @@
 <h1>Tweet List</h1>
-
+<a href="{% url 'tweet_new' %}">New Tweet</a>
 <ul>
   {% if user.is_authenticated %}
   {% if tweets %} {% for tweet in tweets %}
   <li>
-    <h5>{{ tweet.content }}</h5>
+    <a href="{% url 'tweet_detail' pk=tweet.pk %}">{{ tweet.content }}</a>
   </li>
   {% endfor %} {% endif %}
   {% endif %}
