--- a/z_app/templates/tweet_detail.html
+++ b/z_app/templates/tweet_detail.html
@@ -4,13 +4,18 @@
 <a href="{% url 'tweet_delete' tweet.id %}">Delete Tweet</a>
 <a href="{% url 'tweet_list' %}">Back to Tweet list</a>
 
-<div>
-    {% for comment in comments %}
-        <div>
-            <strong>{{ comment.user.username }}</strong>
-            <p>{{ comment.text }}</p>
-        </div>
-    {% endfor %}
-</div>
+{% for comment in comments %}
+    <div>
+        <strong>{{ comment.user.username }}</strong>
+        <p>{{ comment.text }}</p>
+        {% if request.user.is_authenticated and request.user == comment.user %}
+            <a href="{% url 'comment_update' tweet.id comment.id %}">Edit</a>
+            <form action="{% url 'comment_delete' tweet.id comment.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit">Delete</button>
+            </form>
+        {% endif %}
+    </div>
+{% endfor %}
 
 {% include 'comment_form.html' %}
