--- a/z_app/templates/tweet_new.html
+++ b/z_app/templates/tweet_new.html
@@ -4,4 +4,4 @@
   {{ form.as_p }}
   <button type="submit">Post Tweet</button>
 </form>
-<a href="{% url 'tweet_list' %}">Back to Tweet List</a>
+<a href="{% url 'home' %}">Back to Tweet List</a>
