--- a/z_app/templates/tweet_edit.html
+++ b/z_app/templates/tweet_edit.html
@@ -3,4 +3,4 @@
   {{ form.as_p }}
   <button type="submit">Save changes</button>
 </form>
-<a href="{% url 'tweet_list' %}">Cancel</a>
+<a href="{% url 'home' %}">Cancel</a>
