--- a/z_app/templates/navbar.html
+++ b/z_app/templates/navbar.html
@@ -15,8 +15,8 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="new-tweet" href="{% url 'tweet_new' %}">New Post</a>
-        <a class="all-posts" href="{% url 'home' %}">All Posts</a>
+        <a class="nav-options" href="{% url 'tweet_new' %}">New Post</a>
+        <a class="nav-options" href="{% url 'home' %}">All Posts</a>
       </li>
     </ul>
 
