--- a/z_app/templates/tweet_edit.html
+++ b/z_app/templates/tweet_edit.html
@@ -2,11 +2,14 @@
 {% load static %}
 {% block content %}
 
-<form method="POST" class="post-form">
+<form class="tweet-edit-form" method="POST" class="post-form">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Save changes</button>
+<div id="tweet-edit-options">
+  <button type="submit">Save</button>
 </form>
-<a href="{% url 'home' %}">Cancel</a>
+|
+<a id="tweet-edit-options" href="{% url 'home' %}">Cancel</a>
+</div>
 
 {% endblock content %}
