--- a/z_app/templates/navbar.html
+++ b/z_app/templates/navbar.html
@@ -1,21 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black">
     <a class="navbar-brand" href="{% url 'home'%}">Z</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      
+      {% if request.user.is_authenticated %}
         <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link1</a>
-        </li>
-      </ul>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'profiles' %}">Profiles</a>
+          </li>
+        </ul>
+        <ul class="nav-bar-nav sm-icons">
+          <li class="navbar-brand"><a class="nav-link" href="{% url 'profile' request.user.id %}"> My Profile <i class="bi bi-person-circle"></i></a> </li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"> Logout</a> </li>
+        </ul>
+        {% else %}
+        <ul class="nav navbar-nav navbar-left">
+          <li class="navbar-brand"><a class="nav-link" href="{% url 'login' %}"> Login</a> </li>
+          <li class="navbar-brand"><a class="nav-link" href="{% url 'register' %}"> Register</a> </li>
+           
+        </ul>
 
-      <form class="form-inline my-2 my-lg-0">
+        {% endif %}
+
+
+      <!-- <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
-    
+     -->
     </div>
   </nav>
