--- a/z_app/static/style.css
+++ b/z_app/static/style.css
@@ -1,10 +1,124 @@
-.navbar .login-btn {
-    position: absolute;
-    top: 0px;
-    right: 15px;
+
+  .nav-options {
+    color: white;
+    margin: 25px;
   }
-  @media (max-width: 767px) {
-    .navbar .login-btn {
-      right: 75px;
-    }
+  
+  .nav-options:hover {
+    color: rgb(226, 225, 225);
+    text-decoration: none;
   }
+  
+  .tweet-list-title {
+    font-size: 3vw;
+    font-weight: bold;
+    margin-bottom: 3vw;
+    text-align: center;
+    color: black;
+  }
+  
+  .tweet-list {
+    border: 0.25vw solid black;
+    text-decoration: none;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px;
+  }
+  
+  .tweet-list-username {
+    font-size: 3vw;
+    margin: 50px;
+    padding-bottom: 15px;
+    text-align: left;
+    list-style: none;
+    color: black;
+    border-bottom: 0.25vw solid black;
+  }
+  
+  #tweet-list-created-at {
+    font-size: 1vw;
+  }
+  
+  #tweet-list-content {
+    color: black;
+  }
+  
+  #tweet-list-content:hover {
+    color: grey;
+    text-decoration: none;
+  }
+  
+  .tweet-detail-username {
+    font-size: 3vw;
+    font-weight: bold;
+    padding-left: 10px;
+  }
+  
+  .tweet-detail-created-at {
+    font-size: 1vw;
+    padding-left: 10px;
+  }
+  
+  .tweet-detail-content {
+    font-size: 3vw;
+    color: black;
+    margin: 30px;
+  }
+  
+  .tweet-detail-options {
+    font-size: 2vw;
+    color: black;
+    padding: 10px;
+  }
+  
+  .tweet-detail-options:hover {
+    color: grey;
+    text-decoration: none;
+  }
+  
+  button {
+    text-decoration: none;
+    color: black;
+    background: none;
+    border: none;
+    padding: 0px;
+    font-size: 2vw;
+    display: inline;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    color: grey;
+    text-decoration: none;
+  }
+  
+  #id_content {
+      display: block;
+      width: 50vw;
+      font-size: 2vw;
+  }
+  
+  label {
+      font-size: 2vw;
+      margin: 10px;
+      color: black;
+      text-align: left;
+  }
+  
+  #tweet-edit-options {
+    font-size: 2vw;
+    padding: 0px;
+    display: inline;
+    text-decoration: none;
+  }
+  
+  #tweet-edit-options:hover {
+    color: grey;
+    text-decoration: none;
+  }
+  
+  a {
+      color: black;
+      text-decoration: none;
+  }
+  
