--- a/z_app/templates/home.html
+++ b/z_app/templates/home.html
@@ -1,5 +1,6 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 
-{% block content%}
-<h1>Zzz me!</h1>
+{% block content %}
+{% include 'tweet_list.html' %}
 {% endblock %}
+
