--- a/z_app/templates/login.html
+++ b/z_app/templates/login.html
@@ -19,7 +19,7 @@
           <input type="password" class="form-control" name="password" placeholder="Password">
         </div>
        
-        <button type="submit" class="btn btn-secondary">Submit</button>
+        <button type="submit" class="btn btn-secondary">Sign In</button>
       </form>
 </div>
 
