--- a/z_app/templates/navbar.html
+++ b/z_app/templates/navbar.html
@@ -10,25 +10,25 @@
           <li class="nav-item">
           <a class="nav-link" href="{% url 'profiles' %}">Profiles</a>
           </li>
+          
         </ul>
-        <ul class="nav-bar-nav sm-icons">
-          <li class="navbar-brand"><a class="nav-link" href="{% url 'profile' request.user.id %}"> My Profile <i class="bi bi-person-circle"></i></a> </li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"> Logout</a> </li>
+        <ul classs="navbar-nav ms-auto">
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}"> Logout</a> </li>
+          <li class="navbar-item">
+            <a class="nav-link" href="{% url 'profile' request.user.id %}"> My Profile <i class="bi bi-person-circle"></i></a> </li>
         </ul>
+
         {% else %}
-        <ul class="nav navbar-nav navbar-left">
-          <li class="navbar-brand"><a class="nav-link" href="{% url 'login' %}"> Login</a> </li>
-          <li class="navbar-brand"><a class="nav-link" href="{% url 'register' %}"> Register</a> </li>
+        <ul class="navbar-nav ms-auto">
+          <li class="navbar-item"><a class="nav-link" href="{% url 'login' %}"> Login</a> </li>
+          <li class="navbar-item"><a class="nav-link" href="{% url 'register' %}"> Register</a> </li>
            
         </ul>
 
         {% endif %}
 
 
-      <!-- <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-     -->
+
     </div>
   </nav>
