--- a/z_app/templates/profile.html
+++ b/z_app/templates/profile.html
@@ -7,6 +7,18 @@
         <div class="col-8"> 
             <h1>{{ profile.user.username}}'s Profile</h1>
             <hr>
+            <a class="btn btn-secondary" href="{% url 'tweet_new' %}" role="button">POST</a>
+            <hr>
+            
+            {% if tweets %} 
+                {% for tweet in tweets %}
+                <div class="alert alert-dark" role="alert">
+                    <h5 class="card-title"> {{ tweet.user.username }}</h5>
+                    <a id="tweet-list-content" href="{% url 'tweet_detail' pk=tweet.pk %}">{{ tweet.content }}</a>
+                    <p class="card-text"><small class="text-muted">Created On: {{tweet.created_at }}</small></p>
+                </div>
+                {% endfor %} 
+            {% endif %} 
         </div>
         <div class="col-4">
             <div class="card" style="width: 18rem;">
@@ -14,15 +26,18 @@
                 <div class="card-body">
                   <h5 class="card-title">{{ profile.user.username}}</h5>
                 </div>
+                <hr>
                 <h5>Follows</h5>
+                <hr>
                     {% for follow in profile.follows.all %}
                         <a href="{% url 'profile' follow.user.id %}">{{ follow }}</a>
-                        <br>
                     {% endfor %}
+                    <br/>
+                <hr>
                 <h5>Followed By</h5>
+                <hr>
                     {% for follow in profile.followed_by.all %}
                     <a href="{% url 'profile' follow.user.id %}">{{ follow }}</a>
-                    <br>
                     {% endfor %}
                 {% endif %}
 
