--- a/z_app/templates/register.html
+++ b/z_app/templates/register.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         {{  form.as_p }}
 
-        <button type="submit" class="btn btn-secondary">Register</button>
+        <button type="submit" class="btn btn-secondary">Sign Up</button>
       </form>
 </div>
 
