--- a/z_app/templates/navbar.html
+++ b/z_app/templates/navbar.html
@@ -1,21 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'home'%}">Z</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      
-        <ul class="navbar-nav mr-auto">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black">
+  <a class="navbar-brand" href="{% url 'home'%}">Z</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    {% if request.user.is_authenticated %}
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Link1</a>
+        <a class="nav-link" href="{% url 'profiles' %}">Profiles</a>
         </li>
+        
+      </ul>
+      <ul classs="navbar-nav ms-auto">
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout' %}"> Logout</a> </li>
+        <li class="navbar-item">
+          <a class="nav-link" href="{% url 'profile' request.user.id %}"> My Profile <i class="bi bi-person-circle"></i></a> </li>
       </ul>
 
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    
-    </div>
-  </nav>
+      {% else %}
+      <ul class="navbar-nav ms-auto">
+        <li class="navbar-item"><a class="nav-link" href="{% url 'login' %}"> Login</a> </li>
+        <li class="navbar-item"><a class="nav-link" href="{% url 'register' %}"> Register</a> </li>
+         
+      </ul>
+
+      {% endif %}
+
+
+
+  </div>
+</nav>
