--- a/z_app/templates/tweet_detail.html
+++ b/z_app/templates/tweet_detail.html
@@ -9,16 +9,20 @@
 |
 <a class="tweet-detail-options" href="{% url 'home' %}">All Posts</a>
 
+<a href="{% url 'home' %}">Back to Tweet list</a>
 {% for comment in comments %}
-<div>
-  <strong>{{ comment.user.username }}</strong>
-  <p>{{ comment.text }}</p>
-  {% if request.user.is_authenticated and request.user == comment.user %}
-  <a href="{% url 'comment_update' tweet.id comment.id %}">Edit</a>
-  <form action="{% url 'comment_delete' tweet.id comment.id %}" method="post">
-    {% csrf_token %}
-    <button type="submit">Delete</button>
-  </form>
-  {% endif %}
-</div>
-{% endfor %} {% include 'comment_form.html' %} {% endblock content %}
+    <div>
+        <strong>{{ comment.user.username }}</strong>
+        <p>{{ comment.text }}</p>
+        {% if request.user.is_authenticated and request.user == comment.user %}
+            <a href="{% url 'comment_update' tweet.id comment.id %}">Edit</a>
+            <form action="{% url 'comment_delete' tweet.id comment.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit">Delete</button>
+            </form>
+        {% endif %}
+    </div>
+{% endfor %}
+
+{% include 'comment_form.html' %} 
+{% endblock %}
